// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package socket;

// The greeting service definition.
service Socket {
  // Sends a greeting
  rpc UploadAuction (UploadAuctionBody) returns (Empty) {}

  rpc ListenRoom (ListenRoomBody) returns (Empty) {}

  rpc UnregisterRoom (UnregisterRoomBody) returns (Empty) {}

  rpc StopListenRoom (StopListenRoomBody) returns (Empty) {}

  rpc CreateRoom (CreateRoomBody) returns (Empty) {}
}

// The request message containing the user's name.
message UploadAuctionBody {
  string auctionId = 1;
}

message ListenRoomBody {
  string auctionId = 1;
  string userId = 2;
} 

message UnregisterRoomBody {
  string auctionId = 1;
}

message StopListenRoomBody {
  string auctionId = 1;
  string userId = 2;
}

message CreateRoomBody {
  string auctionId = 1;
}

message Empty {}
 